--- a/al-tamimi-college-system/frontend/index.html
+++ b/al-tamimi-college-system/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AL TAMIMI College System</title>
+    <meta name="mobile-web-app-capable" content="yes">
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
